--- a/src/scss/components/_story.scss
+++ b/src/scss/components/_story.scss
@@ -3,13 +3,20 @@
         margin-bottom: 0;
     }
     h2 {
-        margin-bottom: 90px;
+        margin-bottom: 60px;
+        @media only screen and (min-width:834px) {
+            margin-bottom: 90px;
+        }
     }
     h1 {
-        margin-top: 50vh;
-        margin-bottom: 150px;
+        margin-top: 120px;
+        margin-bottom: 90px;
+        @media only screen and (min-width:834px) {
+            margin-top: 50vh;
+            margin-bottom: 150px;
+        }
         &.story  {
-            font-size: 8vw;
+            font-size: 12vw;
             @media only screen and (min-width:834px) {
                 font-size: 8vw;
             }
@@ -19,19 +26,27 @@
         margin-bottom: 180px;
         @include paragraph-xxl(400, left);
         max-width: 60vw;
+        @media only screen and (min-width:834px) {
+            margin-bottom: 120px;
+        }
     }
     ul {
-    margin-bottom: 180px;
+        margin-bottom: 90px;
+        @media only screen and (min-width:834px) {
+            margin-bottom: 150px;
+        }
     }
 
     li {
         display: block;
         max-width: calc(100vw - 60px);
-        padding-top: 30px;
-        padding-bottom: 30px;
+        padding-top: 15px;
+        padding-bottom: 15px;
         @include paragraph-xl(300, left);
         border-bottom: 1px solid rgba($primary-2, 0.2);
         @media only screen and (min-width:834px) {
+            padding-top: 30px;
+            padding-bottom: 30px;
             max-width: 60vw;
         }
         @media only screen and (min-width:1280px) {
