--- a/src/components/navigation.njk
+++ b/src/components/navigation.njk
@@ -8,14 +8,13 @@
                 <li><a href="./index.njk">Bradley Davis</a></li>
                 <li><a href="./mercury-go.njk">Mercury Go</a></li>
                 <li><a href="./iod.njk">IOD</a></li>
-                <li><a href="./about.njk">Mercury Kiss Oil Goodbye</a></li>
-                <!-- <li><a href="#">Motivators</a></li> -->
+                {# <li><a href="./about.njk">Mercury Kiss Oil Goodbye</a></li> #}
             </ul>
         </nav>
 
         <div class="navContactWrap">
             <ul class="contact-ul">
-                <li><a href="#">bradleydavis88@gmail.com &#8599;</a></li>
+                <li><a href="#">bradleydavis88@gmail.com</a></li>
                 {# <li><a href="tel:+6421484018">+64 21 484 018</a></li> #}
             </ul>
         </div>
