--- a/src/index.njk
+++ b/src/index.njk
@@ -16,11 +16,13 @@
 
         <h2 class="big-text story">
             I'm a Wellington, New Zealand based senior<span class="show-parts"> <span class="trigger">digital designer</span><span class="hide">. I love collaborating with my <span class="show-parts"> <span class="trigger">team</span><span class="hide"> to come up with a good <span class="show-parts"> <span class="trigger">plan of attack</span><span class="hide"> before we put<span class="show-parts"> <span class="trigger">'pen' to paper</span><span class="hide"> & work our magic</span></span></span></span></span></span></span>.
-            </br>
-            </br>
+        </h2>
+
+        <h2 class="big-text story">
             Working in design makes me<span class="show-parts"> <span class="trigger">happy</span><span class="hide">. It means most mornings i'm not dragging my<span class="show-parts"> <span class="hide">cute </span> <span class="trigger">butt</span> </span>out of<span class="show-parts"> <span class="trigger">bed</span><span class="hide">. I honestly don't know what i'd be doing if I wasn't<span class="show-parts"> <span class="trigger">designing</span><span class="hide">. Hmmm, maybe something in film</span></span></span></span></span></span></span></span></span></span></span></span>.
-            </br>
-            </br>
+        </h2>
+
+        <h2 class="big-text story">
             My current role with Catch Design involves leading design on a diverse rannge of <span class="show-parts"> <span class="trigger">projects</span><span class="hide"><span class="show-parts"> <span class="trigger"> big & small</span><span class="hide">, creative & corporate</span></span></span></span></span></span>.
         </h2>
 
