--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -6,13 +6,15 @@
 }
 
 .reveal-boy {
-    position: fixed; /* Make it stick/fixed */
-    top: 0; /* Stay on top */
-    width: 100%; /* Full width */
-    z-index: 3;
-    transition: top 1s; /* Transition effect when sliding down (and up) */
-    &.active {
-        top: -300px;
+    @media only screen and (min-width:834px) {
+        position: fixed; /* Make it stick/fixed */
+        top: 0; /* Stay on top */
+        width: 100%; /* Full width */
+        z-index: 3;
+        transition: top 1s; /* Transition effect when sliding down (and up) */
+        &.active {
+            top: -300px;
+        }
     }
 }
 
@@ -42,44 +44,48 @@
             grid-template-rows: repeat(2, 60px);
         }
         li {
-            box-shadow: inset -1px 0 0 0 $primary-2;
-            transition: all .2s ease-in-out;
-            &.active {
-                box-shadow: inset -3px 0 0 0 $primary-3;
-                color: $primary-3;
-            }
-            &:hover {
-                box-shadow: inset -3px 0 0 0 $primary-3;
-                color: $primary-3
-
-            }
-            &:nth-child(1) {
-                grid-area: 1 / 1 / span 1 / span 12;
-                box-shadow: none;
-            }
-            &:nth-child(2) {
-                grid-area: 2 / 1 / span 1 / span 12;
-            }
-            &:nth-child(3) {
-                grid-area: 3 / 1 / span 1 / span 12;
-            }
-            &:nth-child(4) {
-                grid-area: 4 / 1 / span 1 / span 12;
-            }
-            &:nth-child(5) {
-                grid-area: 5 / 1 / span 1 / span 12;
-            }
             @media only screen and (min-width:834px) {
+                box-shadow: inset -1px 0 0 0 $primary-2;
+                transition: all .2s ease-in-out;
+                &.active {
+                    box-shadow: inset -3px 0 0 0 $primary-3;
+                    color: $primary-3;
+                }
+                &:hover {
+                    box-shadow: inset -3px 0 0 0 $primary-3;
+                    color: $primary-3
+                }
                 &:nth-child(1) {
                     grid-area: 1 / 2 / span 1 / span 6;
                     a {
-                        text-align-last: left;
                         transition: color .2s ease-in-out;
                         &:hover {
                             color: $primary-3
                         }
                     }
                 }
+            }
+            &:nth-child(1) {
+                grid-area: 2 / 2 / span 1 / span 6;
+                box-shadow: none;
+                a {
+                    text-align: left;
+                    padding-left: 20px;
+                }
+            }
+            &:nth-child(2) {
+                grid-area: 2 / 6 / span 1 / span 6;
+            }
+            &:nth-child(3) {
+                grid-area: 3 / 1 / span 1 / span 11;
+            }
+            &:nth-child(4) {
+                grid-area: 4 / 1 / span 1 / span 11;
+            }
+            &:nth-child(5) {
+                grid-area: 5 / 1 / span 1 / span 11;
+            }
+            @media only screen and (min-width:834px) {
                 &:nth-child(2) {
                     grid-area: 2 / 1 / span 1 / span 8;
                 }
@@ -123,7 +129,6 @@
                 @media only screen and (min-width:834px) {
                     line-height: 1.5;
                     padding-top: 30px;
-                    padding-right: 20px;
                 }
                 @media only screen and (min-width:1481px) {
                     padding-right: 30px;
