--- a/src/scss/components/_page-title.scss
+++ b/src/scss/components/_page-title.scss
@@ -7,10 +7,14 @@
         grid-column: 1 / 25;
     }
     h1 {
-        @include page-title(17vw);
-        line-height: 100vh;
-        width: 120vw;
-        height: 70vh;
-        margin: 0 0 0 -10vw;
+        @media only screen and (min-width:834px) {
+            font-size: 17vw;
+            margin: 360px 0 0 -10vw;
+            width: 120vw;
+        }
+        width: 110%;
+        @include page-title(27vw);
+        line-height: 1.2;
+        margin: 60px 0 0 -3vw;
     }
 }
