--- a/src/components/iod-ecommerce_case-study_info-left.njk
+++ b/src/components/iod-ecommerce_case-study_info-left.njk
@@ -2,21 +2,21 @@
 
     <div class="case-study-grid-set">
 
-        <h3 class="paragraph-xxl"><span class="span-large">BOOKINGS SIMPLIFIED*</span>Book multiple different courses and events, for individuals or large groups, all within one simplified transaction.</h3>
+        <h3 class="paragraph-xxl"><span class="span-large">ECOMMERCE</span>Book multiple different courses &amp; events, for individuals or large groups, all within one simplified transaction.</h3>
 
         <picture class="body-image">
-            <source media="(min-width: 1200px)" srcset="./images/projects/iod/home-desktop@2x.png">
-            <img src="./images/projects/iod/home-desktop@2x.png">
+            <source media="(min-width: 1200px)" srcset="./images/projects/iod/5-1-ecommerce@1x.png 1x, ./images/projects/iod/5-1-ecommerce@2x.png 2x">
+            <img src="./images/projects/iod/5-1-ecommerce@1x.png">
         </picture>
 
         <picture class="body-image">
-            <source media="(min-width: 1200px)" srcset="./images/projects/iod/home-desktop@2x.png">
-            <img src="./images/projects/iod/home-desktop@2x.png">
+            <source media="(min-width: 1200px)" srcset="./images/projects/iod/5-2-ecommerce@1x.png 1x, ./images/projects/iod/5-2-ecommerce@2x.png 2x">
+            <img src="./images/projects/iod/5-2-ecommerce@1x.png">
         </picture>
 
         <picture class="body-image">
-            <source media="(min-width: 1200px)" srcset="./images/projects/iod/home-desktop@2x.png">
-            <img src="./images/projects/iod/home-desktop@2x.png">
+            <source media="(min-width: 1200px)" srcset="./images/projects/iod/5-3-ecommerce@1x.png 1x, ./images/projects/iod/5-3-ecommerce@2x.png 2x">
+            <img src="./images/projects/iod/5-3-ecommerce@1x.png">
         </picture>
 
     </div>
