--- a/src/components/mercury-discovery_case-study_app_info-right.njk
+++ b/src/components/mercury-discovery_case-study_app_info-right.njk
@@ -2,11 +2,11 @@
 
     <div class="case-study-grid-set">
 
-        <h3 class="paragraph-xxl"><span class="span-large">ONBOARDING</span>Helping customers explore & discover with ease.</h3>
+        <h3 class="paragraph-xxl"><span class="span-large">ONBOARDING</span>Helping customers explore &amp; discover the app, so they can do the important things faster.</h3>
 
         <div class="paragraph-position positioning-one">
             <div class="sticky-boy">
-                <p class="paragraph-x"><span class="span-large">LOGIN SCREENS</span>Customer or not, get the bigger picture and see what Mercury Go has on offer, before needing to login.</p>
+                <p class="paragraph-x"><span class="span-large">LOGIN SCREENS</span>Customer or not, get the bigger picture &amp; see what Mercury Go has to offer, before needing to login.</p>
             </div>
         </div>
 
@@ -29,7 +29,7 @@
 
         <div class="paragraph-position positioning-two">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">DISCOVERY HELPERS</span>To help a customers exploration of Mercury Go &amp; key functionality, "Discovery Helpers" are peppered throughout.</p>
+                <p class="paragraph-xl"><span class="span-large">DISCOVERY HELPERS</span>To help a customers discovery of Mercury Go &amp; it's key functionality, "Discovery Helpers" are placed throughout.</p>
             </div>
         </div>
 
