--- a/src/components/mercury-my-account_case-study_app_info-left.njk
+++ b/src/components/mercury-my-account_case-study_app_info-left.njk
@@ -3,7 +3,8 @@
 
     <div class="case-study-grid-set">
 
-        <h3 class="paragraph-xxl"><span class="span-large">MY ACCOUNT</span>We worked closely with Mercury’s API team to improve & implement new My Account functionality as well as integrating with their legacy API’s allowing us to empower customersin different ways about their power usage.</h3>
+        <h3 class="paragraph-xxl"><span class="span-large">MY ACCOUNT</span>We worked closely with Mercury’s API team to improve & implement new 'My Account' functionality, allowing us to empower customers in different ways about their usage.</h3>
+        {# <h3 class="paragraph-xxl"><span class="span-large">MY ACCOUNT</span>We worked closely with Mercury’s API team to improve & implement new My Account functionality, as well as integrating with their current API’s, allowing us to empower customers in different ways about their power usage.</h3> #}
 
         <div class="paragraph-position positioning-one">
             <div class="sticky-boy">
@@ -51,7 +52,7 @@
 
         <div class="paragraph-position positioning-three">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">USAGE</span>Make smarter decisions about the power you use by swiping & tapping graphs to see your bill & daily usage breakdowns.</p>
+                <p class="paragraph-xl"><span class="span-large">USAGE</span>Make smarter decisions about your power consumption by swipe & tapping the graphs to see your bill & daily usage breakdowns.</p>
             </div>
         </div>
 
