--- a/src/components/mercury-spend_case-study_app_info-right.njk
+++ b/src/components/mercury-spend_case-study_app_info-right.njk
@@ -1,3 +1,7 @@
+{# <div class="big-text-position">
+    <h2 class="big-text center">Spend Mercury Dollars to reduce your power bill or fly faster by converting them into Airpoints.</h2>
+</div> #}
+
 <div class="mercury-earn case-study-wrap app-info-right">
 
     <div class="case-study-grid-set">
@@ -29,7 +33,7 @@
 
         <div class="paragraph-position positioning-two">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">LOWER YOUR LAKE</span>Drag down the spend-scrubber, &amp; watch your “real physics” digital water level drop.</p>
+                <p class="paragraph-xl"><span class="span-large">YOUR DIGITAL LAKE LEVEL</span>Start spending, by dragging the scrubber down, &amp; watch your lake level drop.</p>
             </div>
         </div>
 
