--- a/src/components/next-project-iod.njk
+++ b/src/components/next-project-iod.njk
@@ -1,13 +1,13 @@
 {# <div class="connector-line"></div> #}
 
-<div class="next-project">
+<div class="next-project next-project--iod">
 
-<p href="./iod.njk" class="next-project-text"><span>Next — </span>Institute of Directors</p>
+    <a href="./iod.njk" class="next-project-text"><span>Next — </span>Institute of Directors</a>
 
     <a href="./iod.njk">
         <picture>
-            <source media="(min-width: 834px)" srcset="./images/projects/iod/home-desktop@2x.png">
-            <img src="./images/projects/iod/home-mobile@2x.png">
+            <source media="(min-width: 834px)" srcset="./images/projects/iod/0-1-hero@2x.png">
+            <img src="./images/projects/iod/1-1-brand@2x.png">
         </picture>
     </a>
 
