--- a/src/index.njk
+++ b/src/index.njk
@@ -9,21 +9,21 @@
         <h1 class="big-text story">
 
             Hello,</br>
-            I'm
-            <span class="show-parts"><span class="trigger">Bradley</span><span class="hide color-change"> "Hotdog" Davis</span></span>.
+            The names
+            <span class="show-parts"><span class="trigger">Bradley</span><span class="hide color-change"> <span class="show-parts"><span class="trigger">Hotdog</span><span class="hide color-change"> <span class="show-parts"><span class="trigger">Waffle</span><span class="hide color-change"> Davis</span></span></span></span></span></span>.
 
         </h1>
 
         <h2 class="big-text story">
-            I'm a Wellington, New Zealand based senior<span class="show-parts"> <span class="trigger">digital designer</span><span class="hide">. I love collaborating with my <span class="show-parts"> <span class="trigger">team</span><span class="hide"> to come up with a good <span class="show-parts"> <span class="trigger">plan of attack</span><span class="hide"> before we put<span class="show-parts"> <span class="trigger">'pen' to paper</span><span class="hide"> & work our magic</span></span></span></span></span></span></span>.
+            I'm a Wellington, New Zealand based senior<span class="show-parts"> <span class="trigger">digital designer</span><span class="hide">. I bang when I'm collaborating closely with my <span class="show-parts"> <span class="trigger">team</span><span class="hide"> to create the <span class="show-parts"> <span class="trigger">dream</span><span class="hide"> before we put our<span class="show-parts"> <span class="trigger">sticky mits on keys</span><span class="hide"> & cast our spells</span></span></span></span></span></span></span>.
         </h2>
 
         <h2 class="big-text story">
-            Working in design makes me<span class="show-parts"> <span class="trigger">happy</span><span class="hide">. It means most mornings i'm not dragging my<span class="show-parts"> <span class="hide">cute </span> <span class="trigger">butt</span> </span>out of<span class="show-parts"> <span class="trigger">bed</span><span class="hide">. I honestly don't know what i'd be doing if I wasn't<span class="show-parts"> <span class="trigger">designing</span><span class="hide">. Hmmm, maybe something in film</span></span></span></span></span></span></span></span></span></span></span></span>.
+            Working in design makes my<span class="show-parts"> <span class="trigger">cheeks blush</span><span class="hide">. This means most mornings I'm not dragging my<span class="show-parts"> <span class="hide">cute little </span> <span class="trigger">butt</span> </span>out<span class="show-parts"> <span class="trigger">the sheets</span><span class="hide">. I would be a sad little man if I wasn't interfacing :(
         </h2>
 
         <h2 class="big-text story">
-            My current role with Catch Design involves leading design on a diverse rannge of <span class="show-parts"> <span class="trigger">projects</span><span class="hide"><span class="show-parts"> <span class="trigger"> big & small</span><span class="hide">, creative & corporate</span></span></span></span></span></span>.
+            My current role with Catch Design involves leading design on diverse <span class="show-parts"> <span class="trigger">projects</span><span class="hide"><span class="show-parts"> <span class="trigger"> big & small</span><span class="hide">, creative & corporate</span></span></span></span></span></span>.
         </h2>
 
         <ul>
@@ -37,7 +37,7 @@
         </ul>
 
         <h2 class="big-text story">
-            I try to stay relevant, &amp; be an invaluable part of the <span class="show-parts"> <span class="trigger">team</span><span class="hide">. It's important to me that I learn &amp; grow within my <span class="show-parts"> <span class="trigger">field</span><span class="hide">, but also gaining knowledge &amp; skills in <span class="show-parts"> <span class="trigger">overlapping areas</span><span class="hide"> to build bridges for <span class="show-parts"> <span class="trigger">teams</span><span class="hide">, enablinng a more <span class="show-parts"> <span class="trigger">empathetic approach</span> to everything we do<span class="hide">. I believe great designers aren't just designers</span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span>.
+            I try to stay fresh, &amp; be invaluable to my <span class="show-parts"> <span class="trigger">team</span><span class="hide">. It's essential that I learn all the things &amp; grow my <span class="show-parts"> <span class="trigger">expertise</span><span class="hide">, but also gain prowess in <span class="show-parts"> <span class="trigger">overlapping areas</span><span class="hide"> to build <span class="show-parts"> <span class="trigger">bridges</span><span class="hide">, so we can create with an empathetic approach in <span class="show-parts"> <span class="trigger">everything we do</span><span class="hide">. I believe great designers aren't just designers</span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span>.
             {# Design is definitely a little<span class="show-parts"> <span class="trigger">misunderstood</span><span class="hide">, a lot of the time<span class="show-parts"> <span class="trigger">undervalued</span><span class="hide">, always<span class="show-parts"><span class="trigger"> powerful</span><span class="hide"> & inherently<span class="show-parts"> <span class="trigger">magical</span><span class="hide">. There's nothing better than working with<span class="show-parts"> <span class="trigger">clients</span> <span class="hide">such as <a href="https://apps.apple.com/nz/app/mercury-go/id1420855733" target="_blank">Mercury &nearr;</a> & <a href="https://www.iod.org.nz/#" target="_blank">IoD &nearr;</a></span> </span>who have a shared vision & emphasis for<span class="show-parts"> <span class="trigger"> design</span><span class="hide"> to help deliver business & customer value</span></span></span></span></span></span></span></span></span></span>. #}
         </h2>
 
