--- a/src/scss/components/_manifest.scss
+++ b/src/scss/components/_manifest.scss
@@ -7,3 +7,5 @@
 @import "_next-project.scss";
 @import "_big-text.scss";
 @import "_story.scss";
+@import "_list.scss";
+@import "_project-specific.scss";
