--- a/src/components/iod-my-account_case-study_info-right.njk
+++ b/src/components/iod-my-account_case-study_info-right.njk
@@ -67,7 +67,7 @@
 
         <div class="paragraph-position positioning-three">
             <div class="sticky-boy">
-                <p class="paragraph-xl"><span class="span-large">PREFERENCES</span>Members can customise what is presented to them on the site, and electronic collateral to better suit their role & interests within governance.</p>
+                <p class="paragraph-xl"><span class="span-large">PREFERENCES</span>Members can customise what is presented to them on the site, &amp; emails to better suit their roles & interests within governance.</p>
             </div>
         </div>
 
@@ -92,7 +92,7 @@
     </div>
 
 
-    <div class="case-study-grid-set">
+    {# <div class="case-study-grid-set">
 
         <div class="paragraph-position positioning-one">
             <div class="sticky-boy">
@@ -109,9 +109,9 @@
 
         </div>
 
-    </div>
+    </div> #}
 
-    <div class="case-study-grid-set">
+    {# <div class="case-study-grid-set">
 
         <picture class="body-image">
             <source media="(min-width: 1200px)" srcset="./images/projects/iod/3-7-join@1x.png 1x, ./images/projects/iod/3-7-join@2x.png 2x">
@@ -128,7 +128,7 @@
             <img src="./images/projects/iod/3-9-join@1x.png">
         </picture>
 
-    </div>
+    </div> #}
 
 
 
