--- a/src/components/next-project-mercury-go.njk
+++ b/src/components/next-project-mercury-go.njk
@@ -1,13 +1,13 @@
 {# <div class="connector-line"></div> #}
 
-<div class="next-project large">
+<div class="next-project next-project--mercury-go large">
 
     <a href="/mercury-go.njk" class="next-project-text"><span>Next — </span>Mercury Go</a>
 
     <a href="/mercury-go.njk">
         <picture>
-            <source media="(min-width: 834px)" srcset="./images/img-mercurygo-iphonex3-primary@2x.png">
-            <img src="./images/projects/iod/home-mobile@2x.png">
+            <source media="(min-width: 834px)" srcset="./images/projects/mergo/0-1-hero@2x.png">
+            <img src="./images/projects/mergo/challenge/2-6-earn-challenge-overview@2x.png">
         </picture>
     </a>
 
