--- a/src/mercury-go.njk
+++ b/src/mercury-go.njk
@@ -1,10 +1,19 @@
 {% extends "./layout/layout.njk" %}
 {% block content %}
 
-<div class="mercury-go-page outer-grid-set">
+<div class="mercury-go-page outer-grid-set next-project-margin">
 
     <div class="page-title" data-scroll-speed="-2">
         <h1>Mercury Go</h1>
+    </div>
+
+    <div class="breakdown-wrap" data-scroll-speed="-2">
+        <div class="breakdown-grid-set">
+            <p class="breakdown-component paragraph-large"><span class="span-large">CLIENT</span>Mercury</p>
+            <p class="breakdown-component paragraph-large"><span class="span-large">PLATFORM</span>Native iOS & Android app</p>
+            <p class="breakdown-component paragraph-large"><span class="span-large">MY ROLE</span>Lead UX/UI Designer</p>
+            <p class="breakdown-component paragraph-large"><span class="span-large">MVP DEVLIVERY</span>May 2017 - Jun 2018</p>
+        </div>
     </div>
 
     <div class="image-hero-wrap">
@@ -14,35 +23,29 @@
         </picture>
     </div>
 
-    <div class="breakdown-wrap">
-        <div class="breakdown-grid-set">
-            <p class="breakdown-component paragraph-large"><span class="span-large">CLIENT</span>Mercury</p>
-            <p class="breakdown-component paragraph-large"><span class="span-large">PLATFORM</span>Native iOS & Android app</p>
-            <p class="breakdown-component paragraph-large"><span class="span-large">MY ROLE</span>Lead UX/UI Designer</p>
-            <p class="breakdown-component paragraph-large"><span class="span-large">MVP DEVLIVERY</span>May 2017 - Jun 2018</p>
-        </div>
-    </div>
-
     <div class="big-text-position">
-        <h2 class="big-text center">
-            Creating a positive brand worth talking about. We delivered Mercury an app that stands out from the crowd. We focused on inspiring Mercury customers about energy and offering them something more meaningful than just the typical utility focused experience.
+        <h2 class="big-text">
+            Creating a positive brand worth <span class="show-parts"> <span class="trigger">talking about</span><span class="hide">. We delivered Mercury an app that <span class="show-parts"> <span class="trigger">stands out</span><span class="hide">. We focused on inspiring customers about energy &amp; offering them something <span class="show-parts"> <span class="trigger">purposeful & beneficial</span><span class="hide">, that they can proudly get <span class="show-parts"> <span class="trigger">behind</span><span class="hide"> rather than a typical utility focused app like all the other power companies</span></span></span></span></span></span></span></span>.
+            {# Creating a positive brand worth talking about. We delivered Mercury an app that stands out. We focused on inspiring customers about energy &amp; offering them something purposeful & beneficial, that they can proudly get behind rather than a typical utility focused app like all the other power companies. #}
         </h2>
     </div>
 
     {% include "./components/mercury-earn_case-study_app_info-left.njk" %}
+
     {% include "./components/mercury-rewards_case-study_app_hero.njk" %}
 
-    <div class="big-text-position">
+    {% include "./components/mercury-spend_case-study_app_info-right.njk" %}
+
+    {# <div class="big-text-position">
         <h2 class="big-text center">“This course was brilliant at focusing on the role of the board in developing strategy from a very purpose-driven perspective.”</h2>
         <img class="author-img" src="./images/testimonials/Kawhi@2x.png" alt="Portrait of Kawhi Leonard">
         <p class="paragraph-large author"><span>Kawhi Leonard — </span>Head of Marketing</p>
-    </div>
+    </div> #}
 
-    {% include "./components/mercury-spend_case-study_app_info-right.njk" %}
     {% include "./components/mercury-my-account_case-study_app_info-left.njk" %}
     {% include "./components/mercury-discovery_case-study_app_info-right.njk" %}
 
-    <div class="big-text-position">
+    <div class="big-text-position last-page-component">
         <p class="big-text position-two">
             We continue to plan &amp; deliver a prioritised, outcome focused roadmap of continuous improvements, within 2 week sprint cycles.
         </p>
