--- a/src/scss/components/_breakdown.scss
+++ b/src/scss/components/_breakdown.scss
@@ -1,25 +1,24 @@
 .breakdown-wrap {
-    z-index: -1;
     grid-column: 1 / -1;
     @media only screen and (min-width:834px) {
         grid-column: 2 / 24;
     }
     .breakdown-grid-set {
-        max-width: 1482px;
+        // max-width: 1482px;
         margin: 30px auto 120px auto;
         @include grid-set-yourself (1, 1, 4, 4);
-        grid-gap: 30px;
+        grid-row-gap: 60px;
         @media only screen and (min-width:550px) {
             grid-row-gap: 60px;
             margin: 10vh auto 240px auto;
         }
         .breakdown-component {
             width: 100%;
-            @include paragraph-large (400, center);
+            @include paragraph-large ($font-sans-200, center, 200);
             .span-large {
                 display: block;
                 margin-bottom: 5px;
-                @include span-large (700, center);
+                @include span-large ($font-sans-400, center, 400);
             }
         }
     }
