--- a/src/scss/components/_case-study.scss
+++ b/src/scss/components/_case-study.scss
@@ -1,6 +1,7 @@
 .case-study-wrap {
     margin: 0 auto;
     grid-column: 1 / -1;
+    z-index: 1;
 
     .case-study-grid-set {
         @include grid-twenty-four;
@@ -19,7 +20,8 @@
     }
 
     h3 {
-        @include paragraph-xxl (300, align);
+        @include paragraph-xxl ($font-sans-200, left, 200);
+        font-weight: 200;
         margin-bottom: 90px;
 
         @media only screen and (min-width:834px) {
@@ -30,8 +32,7 @@
             position: sticky;
             display: block;
             margin-bottom: 15px;
-            @include span-large (700, left);
-
+            @include span-large ($font-sans-400, left, 400);
 
             @media only screen and (min-width:550px) {
                 margin-bottom: 30px;
@@ -42,7 +43,7 @@
 
     p {
         align-self: start;
-        @include paragraph-xl (300, left);
+        @include paragraph-xl ($font-sans-200, left, 200);
         margin-top: 45px;
         @media only screen and (min-width:834px) {
             margin-top: 120px;
@@ -51,7 +52,7 @@
         span {
             display: block;
             margin-bottom: 15px;
-            @include span-large (700, left);
+            @include span-large ($font-sans-400, left, 400);
 
             @media only screen and (min-width:550px) {
                 margin-bottom: 30px;
@@ -96,7 +97,7 @@
         .sticky-boy {
             @media only screen and (min-width:834px) {
                 position: sticky;
-                top: 90px;
+                top: 240px;
             }
         }
 
