--- a/src/scss/components/_page-title.scss
+++ b/src/scss/components/_page-title.scss
@@ -1,19 +1,27 @@
 .page-title {
     grid-column: 1 / -1;
-    z-index: -1;
     width: 100vw;
     overflow: hidden;
+
     @media only screen and (min-width:834px) {
         grid-column: 1 / 25;
     }
     h1 {
+        .iod-page & {
+            color: $color-iod;
+        }
+
+        .mercury-go-page & {
+            color: $color-mercury-go;
+        }
+
         @media only screen and (min-width:834px) {
             font-size: 17vw;
-            margin: 360px 0 0 -10vw;
+            margin: 30vmin 0 0 -10vw;
             width: 120vw;
         }
         width: 110%;
-        @include page-title(27vw);
+        @include page-title(20vw);
         line-height: 1.2;
         margin: 60px 0 0 -3vw;
     }
