--- a/src/scss/modules/_mixins.scss
+++ b/src/scss/modules/_mixins.scss
@@ -19,17 +19,33 @@
     src: url('../fonts/hdm/heldane-display-test-regular.woff') format('woff');
   }
 
+  @font-face {
+    font-family: 'font-sans-200';
+    font-weight: 200;
+    src: url('../fonts/Sohne Test/soehne-test-leicht.woff') format('woff');
+  }
+  @font-face {
+    font-family: 'font-sans-300';
+    font-weight: 300;
+    src: url('../fonts/Sohne Test/soehne-test-buch.woff') format('woff');
+  }
+  @font-face {
+    font-family: 'font-sans-400';
+    font-weight: 400;
+    src: url('../fonts/Sohne Test/soehne-test-kraftig.woff') format('woff');
+  }
 
 
 
-@mixin paragraph-large ($weight, $align) {
-  font-family: $font-mukta;
+
+@mixin paragraph-large ($font, $align, $weight) {
+  font-family: $font;
   // speak: none;
   font-size: 1rem;
-  font-weight: $weight;
   letter-spacing: 0.034375rem;
   line-height: 1.5;
   text-align: $align;
+  font-weight: $weight;
   color: $primary-2;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -37,63 +53,40 @@
     font-size: 1.125rem;
   }
   @media only screen and (min-width:834px) {
-    font-size: 1.25rem;
-    letter-spacing: 0.038125rem;
+    // font-size: 1.25rem;
+    // letter-spacing: 0.038125rem;
   }
 }
 
-@mixin paragraph-large ($weight, $align) {
-  font-family: $font-mukta;
-  // speak: none;
-  font-size: 1rem;
-  font-weight: $weight;
-  letter-spacing: 0.034375rem;
-  line-height: 1.5;
-  text-align: $align;
-  color: $primary-2;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  @media only screen and (min-width:550px) {
-    font-size: 1.125rem;
-  }
-  @media only screen and (min-width:834px) {
-    font-size: 1.25rem;
-    letter-spacing: 0.038125rem;
-  }
-}
-
-@mixin paragraph-xl ($weight, $align) {
-  font-family: $font-mukta;
-  // font-family: Sohne Test;
+@mixin paragraph-xl ($font, $align, $weight) {
+  font-family: $font, sans-serif;
   // speak: none;
   font-size: 1.125rem;
-  font-weight: $weight;
-  letter-spacing: 0.045625;
+  letter-spacing: 0.034375;
   line-height: 1.5;
   text-align: $align;
+  font-weight: $weight;
   color: $primary-2;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   @media only screen and (min-width:550px) {
-    font-size: 1.5rem;
+    font-size: 1.375rem;
+    letter-spacing: 0.041875;
   }
   @media only screen and (min-width:834px) {
     font-size: 1.6875rem;
-    letter-spacing: 0.05125rem;
+    letter-spacing: 0.05125;
   }
 }
 
-@mixin paragraph-xxl ($weight, $align) {
-  font-family: $font-mukta;
-  // font-family: Sohne Test;
-  // font-family: Feijoa Medium;
-  // font-family: Sohne Schmal Test;
+@mixin paragraph-xxl ($font, $align, $weight) {
+  font-family: $font, sans-serif;
   // speak: none;
   font-size: 1.5625rem;
-  font-weight: $weight;
   letter-spacing: 0.05625rem;
   line-height: 1.5;
   text-align: $align;
+  font-weight: $weight;
   color: $primary-2;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -113,29 +106,29 @@
   }
 }
 
-@mixin span-large ($weight, $align) {
-  font-family: $font-mukta;
-  font-size: 0.875rem;
-  font-weight: $weight;
-  letter-spacing: 0.125rem;
+@mixin span-large ($font, $align, $weight) {
+  font-family: $font, sans-serif;
+  font-size: 0.8125rem;
+  letter-spacing: 0.11625rem;
   line-height: 1.25;
   text-align: $align;
+  font-weight: $weight;
   color: $primary-2;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   @media only screen and (min-width:550px) {
-    font-size: 0.9375rem;
+    font-size: 0.875rem;
+    letter-spacing: 0.125rem;
   }
 
   @media only screen and (min-width:834px) {
-    font-size: 1.125rem;
-    letter-spacing: 0.151875rem;
+    font-size: 0.9375rem;
+    letter-spacing: 0.13375rem;
   }
 }
 
 @mixin page-title ($size) {
-  // font-family: $font-mukta;
   font-family: 'feijoa-display';
   // speak: none;
   font-size: $size;
@@ -150,16 +143,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-@mixin h2 ($weight, $align) {
-  // font-family: $font-mukta;
+@mixin h2 ($align) {
   font-family: 'feijoa-display';
   // speak: none;
   // font-size: 8vw;
   // letter-spacing: 0.2vw;
   line-height: 1.3;
   font-size: 4.75vw;
-  letter-spacing: 0.1583333333vw;
-  font-weight: $weight;
+  letter-spacing: 0.15vw;
   text-align: $align;
   font-style: normal;
   color: $primary-2;
@@ -176,13 +167,13 @@
   grid-template-columns: repeat(12, 1fr);
   display: grid;
   grid-template-rows: auto;
-  column-gap: 21px;
+  column-gap: 10px;
   @media only screen and (min-width:550px) {
-    column-gap: 26px;
+    // column-gap: 26px;
   }
   @media only screen and (min-width:834px) {
       grid-template-columns: repeat(24, 1fr);
-      column-gap: 30px;
+      column-gap: 21px;
   }
 }
 
